Add: main페이지 html태그 틀 잡기

--- a/beemo/views/main.html
+++ b/beemo/views/main.html
@@ -9,7 +9,89 @@
 </head>
 
 <body>
-  Hello Beemo!
+  <header>
+    <div>
+      <div>
+        쇼핑하우
+      </div>
+      <div>
+        1. 쿠쿠 2. 단백질 ...
+      </div>
+      <div>
+        돋보기
+      </div>
+    </div>
+  </header>
+
+  <nav>
+    <div>
+      <button>
+        <span>햄버거img</span> 카테고리
+      </button>
+      <ul>
+        <li>핫딜</li>
+        <li>베스트100</li>
+        <li>할인특가</li>
+        <li>기획전</li>
+      </ul>
+      <ul>
+        <li>#건강식품</li>
+        <li>#제철음식</li>
+        <li>#블루투스이어폰</li>
+        <li>#커블체어</li>
+        <li>#노트북</li>
+      </ul>
+      <a href="#"><span>사용자img</span>로그인</a>
+      <a href="#"><span>네모img</span>최근 본 상품</a>
+    </div>
+  </nav>
+
+  <section>
+    <article>
+      <div>
+        <div>
+          <!-- 첫째줄 -->
+          <div>
+            자동차 베스트
+          </div>
+          <div>
+            G마켓
+          </div>
+        </div>
+
+        <div>
+          <!-- 둘째줄 -->
+          <ul>
+            <li><a href="#">1</a></li>
+            <li><a href="#">2</a></li>
+            <li><a href="#">3</a></li>
+            <li><a href="#">4</a></li>
+            <li><a href="#">5</a></li>
+          </ul>
+          <div>
+            더보기(1/276건) ▼
+          </div>
+        </div>
+
+      </div>
+    </article>
+
+    <article>
+      <div>
+        <div>지금뜨는 테마 카테고리</div>
+        <div>
+          <ul>
+            <li><a href="#">6</a></li>
+            <li><a href="#">7</a></li>
+            <li><a href="#">8</a></li>
+            <li><a href="#">9</a></li>
+            <li><a href="#">10</a></li>
+          </ul>
+        </div>
+      </div>
+    </article>
+  </section>
+
 </body>
 
 </html>
