[modify] setting sass=>scss

--- a/shoppingHow/views/index.ejs
+++ b/shoppingHow/views/index.ejs
@@ -4,5 +4,15 @@
     <title>쇼핑하우</title>
     <link rel="stylesheet" href="/stylesheets/style.css" />
   </head>
-  <body></body>
+  <body>
+    <header></header>
+    <main>
+      <div class="main_wrapper">
+        <section class="">패션 베스트</section>
+        <section class="">커피메이커</section>
+        <section class="">그리드</section>
+        <section class="">지금 뜨는 테마 카테고리</section>
+      </div>
+    </main>
+  </body>
 </html>
