--- a/shopping_how/views/index.ejs
+++ b/shopping_how/views/index.ejs
@@ -1,11 +1,26 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title><%= title %></title>
+    <title>쇼핑하우</title>
     <link rel='stylesheet' href='/stylesheets/style.css' />
   </head>
   <body>
-    <h1><%= title %></h1>
-    <p>Welcome to <%= title %></p>
+    <header>
+      <h1>쇼핑하우</h1>
+      <p>by kakaocommerce</p>
+      <nav>
+        <ul></ul>
+        <ul></ul>
+      </nav>
+    </header>
+    <section class="main">
+      <div class="upper-half"></div>
+      <div class="lower-half">
+        <div class="list-item"></div>
+        <div class="view-more"></div>
+      </div>
+    </section>
+    <section class="hot-deal">
+    </section>
   </body>
 </html>
