--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,6 +8,7 @@
     <title>Document</title>
   </head>
   <body>
-    hello
+    example ejs
+    <footer><% include ./parts/footer %></footer>
   </body>
 </html>
