Add 4 scss files

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -45,7 +45,7 @@
                         <ul class="list-hot">
                             <li><a href="#">핫딜</a></li>
                             <li><a href="#">베스트100</a></li>
-                            <li><a href="#" class="emphasis">할인특가</a></li>
+                            <li><a href="#">할인특가<span class="emphasis"></span></a></li>
                             <li><a href="#">기획전</a></li>
                         </ul>
                         <span class="txt-bar"></span>
@@ -55,11 +55,16 @@
                             <li><a href="#">#제철음식</a></li>
                             <li><a href="#">#블루투스이어폰</a></li>
                             <li><a href="#">#커블체어</a></li>
-                            <li><a href="#" class="emphasis">#노트북</a></li>
+                            <li><a href="#">#노트북<span class="emphasis"></span></a></li>
                         </ul>
 
-                        <ul class="login">
-                            <li><a href="#">로그인</a></li>
+                        <ul class="list-usergroup">
+                            <li>
+                                <a href="#">
+                                    <span class="i-user"></span>
+                                    로그인
+                                </a>
+                            </li>
                             <li>
                                 <a href="#">최근본 상품</a>
                                 <span>▼ ICON</span>
