--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -1,4 +1,4 @@
-@import "./.index/root.scss";
-@import "./.index/icon.scss";
-@import "./.index/header.scss";
-@import "./.index/content.scss";
+@import "../sass_src/root.scss";
+@import "../sass_src/icon.scss";
+@import "../sass_src/header.scss";
+@import "../sass_src/content.scss";
