--- a/beemo/views/main.html
+++ b/beemo/views/main.html
@@ -6,8 +6,8 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
-  <link rel="stylesheet" href="../public/stylesheets/util.scss">
-  <link rel="stylesheet" href="../public/stylesheets/shopping.scss">
+  <link rel="stylesheet" href="/stylesheets/css/util.css">
+  <link rel="stylesheet" href="/stylesheets/css/shopping.css">
 </head>
 
 <body>
