--- a/views/index.html
+++ b/views/index.html
@@ -8,8 +8,18 @@
     <title>Document</title>
 </head>
 <body>
-    <div>
-        test
-    </div>
+    <header>
+        <div>
+            <div class="header">
+                <h1>쇼핑하우스</h1>
+                <div class="search_bar">
+                    <form action=""></form>
+                    <div></div>
+                    <label for=""><input type="text" class="search_input"></label>
+                    <button>검색</button>
+                </div>
+            </div>
+        </div>
+    </header>
 </body>
 </html>
