Refactor: improve html(ejs) structure

--- a/shopping_how/views/index.ejs
+++ b/shopping_how/views/index.ejs
@@ -6,21 +6,114 @@
   </head>
   <body>
     <header>
-      <h1>쇼핑하우</h1>
-      <p>by kakaocommerce</p>
-      <nav>
-        <ul></ul>
-        <ul></ul>
+      <span><img class="sh-logo"></span>
+      <div class="searchbox"><!--여기에 돋보기 이미지 들어감--></div>
+      <nav class="nav-container">
+        <ul>
+          <li>카테고리</li>
+          <li>핫딜</li>
+          <li>베스트100</li>
+          <li>할인특가</li>
+          <li>기획전</li>
+          <li>#수능 선물</li>
+          <li>#김치냉장고</li>
+          <li>#복합 가습기</li>
+          <li>#구스다운</li>
+          <li>#온수매트</li>
+        </ul>
+        <ul>
+          <li>로그인</li>
+          <li>최근본 상품</li>
+        </ul>
       </nav>
     </header>
     <section class="main">
-      <div class="upper-half"></div>
+      <div class="upper-half">
+        <div class="upper-half__left">
+          <img>
+        </div>
+        <div class="upper-half__right"><!--여기가 캐로셀-->
+          <img>
+        </div>
+      </div>
       <div class="lower-half">
-        <div class="list-item"></div>
-        <div class="view-more"></div>
+        <div class="main__list-item"><!--여기가 더보기로 추가-->
+          <li>
+            <a href="#">
+            <span>촉촉하고 향기롭게 바디 미스트</span>
+            <span>간편하게 뿌리기 좋아요</span>
+            <span>테마</span>
+          </li>
+          <li>
+            <a href="#">
+              <span>깔끔한 감성 가구 #두닷</span>
+              <span>세련되고 단정한 디자인이 가득</span>
+              <span>테마</span>
+          </li>
+          <li>
+            <a href="#">
+              <span>우리 집 데드 스페이스 없애기</span>
+              <span>자투리 공간에 맞춰 수납하기</span>
+              <span>테마</span>
+          </li>
+          <li>
+            <a href="#">
+              <span>마켓비 빈티지 모음전</span>
+              <span>하나만 고르기 힘든 다양한 디자인</span>
+              <span>테마</span>
+          </li>
+          <li>
+            <a href="#">
+              <span>헤어 관리를 위한 트리트먼트</span>
+              <span>찰랑거리는 머릿결을 위하여</span>
+              <span>테마</span>
+          </li>
+        </div>
+        <div class="view-more">
+          <div>
+            <span>더보기(1건)</span>
+          </div>
+        </div>
       </div>
     </section>
     <section class="hot-deal">
+      <div>
+        <h3>지금뜨는 테마 카테고리</h3>
+        <div class="carousel">
+          <div class="hot-deal__list-item"><!--여기가 케로셀-->
+            <li>
+              <a href="#">
+                <span>깔끔한 감성 가구 #두닷</span>
+                <span>세련되고 단정한 디자인이 가득</span>
+                <span>테마</span>
+            </li>
+            <li>
+              <a href="#">
+                <span>영화관처럼 빵빵한 음질 #사운드바</span>
+                <span>집에서도 실감나게 보는 방법</span>
+                <span>테마</span>
+            </li>
+            <li>
+              <a href="#">
+                <span>디자인도 예쁜 LED 조명 거울</span>
+                <span>모공까지 완벽하게 커버하고 싶다면</span>
+                <span>테마</span>
+            </li>
+            <li>
+              <a href="#">
+                <span>촉촉하고 향기롭게! 바디 미스트</span>
+                <span>간편하게 뿌리기 좋아요</span>
+                <span>테마</span>
+            </li>
+            <li>
+              <a href="#">
+                <span>속건조 완화를 돕는 앰플</span>
+                <span>촉촉하게 수분 공급!</span>
+                <span>테마</span>
+            </li>
+          </div>
+        </div>
+      </div>
     </section>
   </body>
 </html>
