--- a/public/src/css/partials/header.scss
+++ b/public/src/css/partials/header.scss
@@ -3,6 +3,8 @@ header {
   align-items: center;
   justify-content: center;
   padding: 30px;
+  background-color: #fff;
+  margin-top: 20px;
   .header__logo > img {
     width: 120px;
   }
