[SCSS] 생애 첫 @mixin

--- a/raccoon-shopping-express/views/main.scss
+++ b/raccoon-shopping-express/views/main.scss
@@ -1,21 +1,226 @@
-* {
-  margin: 0;
-  padding: 0;
+.body__container {
+  position: relative;
+  width: 100%;
+  text-align: center;
 }
 
-body {
+a {
+  text-decoration: none;
+}
+
+form {
+  display: block;
+}
+
+button {
   font-size: 12px;
   line-height: 1.5;
+  font-family: 돋움, dotum, sans-serif;
   color: #333;
+  border: 0;
+  background-color: transparent;
+  cursor: pointer;
+  border-radius: 0;
+  vertical-align: middle;
 }
 
-.header--shown {
+fieldset {
+  display: block;
+  margin-inline-start: 2px;
+  margin-inline-end: 2px;
+  padding-block-start: 0.35em;
+  padding-inline-start: 0.75em;
+  padding-inline-end: 0.75em;
+  padding-block-end: 0.625em;
+  min-inline-size: min-content;
+  // border-width: 2px;
+  // border-style: groove;
+  // border-color: threedface;
+  // border-image: initial;
+}
+
+.screen-out {
+  display: block;
+  overflow: hidden;
+  position: absolute;
+  left: -9999px;
+  width: 1px;
+  height: 1px;
+  text-indent: -9999px;
+}
+
+header {
   padding-top: 43px;
-  text-align: center;
   min-width: 977px;
 
-  .area--head-top {
+  .header__top {
     display: inline-block;
     vertical-align: top;
+
+    .title--shown {
+      float: left;
+      margin-top: 4px;
+
+      & img {
+        width: 119px;
+        height: auto;
+      }
+    }
+
+    .search-bar {
+      float: left;
+      position: relative;
+      margin: 0 24px 0 30px;
+      z-index: 1060;
+    }
+
+    .box_search {
+      position: relative;
+      width: 670px;
+      height: 54px;
+      padding: 16px 60px 14px 30px;
+      border: 1px solid #cecfd1;
+      border-radius: 10px;
+      background-color: #fff;
+      box-sizing: border-box;
+    }
+
+    .search-bar--keyword {
+      display: block;
+      width: 100%;
+      height: 100%;
+      border: 0;
+      font-weight: 700;
+      font-size: 20px;
+      line-height: 22px;
+      color: #000;
+      letter-spacing: -0.05em;
+      outline: none;
+    }
+
+    .search--btn {
+      position: absolute;
+      right: 0;
+      top: 0;
+      width: 52px;
+      height: 52px;
+    }
+
+    .search--btn--ico {
+      position: absolute;
+      left: 14px;
+      top: 15px;
+      width: 23px;
+      height: 23px;
+    }
+
+    .search--btn--background {
+      display: block;
+      overflow: hidden;
+      font-size: 0;
+      line-height: 0;
+      text-indent: -9999px;
+      background: url(//shop1.daumcdn.net/search/cdn/simage/shopping/v2/common/nav/ico_gnb_shw.png) no-repeat;
+      background-size: 130px 90px;
+    }
+
+    .search--text {
+      position: relative;
+      width: 100%;
+      height: 100%;
+      z-index: -1;
+      display: block;
+      overflow: hidden;
+    }
+  }
+
+  nav {
+    position: relative;
+    margin-top: 40px;
+    border-top: 1px solid #efefef;
+    box-shadow: 0 1px rgb(0 0 0 / 16%);
+    outline: 1px solid red;
+
+    .nav__wrapper {
+      width: 1280px;
+      // margin: 0 auto;
+      height: 54px;
+      margin: 0 151px;
+    }
+
+    .nav--category {
+      float: left;
+      position: relative;
+      z-index: 1050;
+
+      .category-btn {
+        width: 122px;
+        height: 54px;
+        padding-left: 40px;
+        line-height: 58px;
+        display: block;
+        position: relative;
+        font-size: 16px;
+        letter-spacing: -0.04em;
+        color: #000;
+        text-align: left;
+      }
+    }
+
+    .ico--background {
+      display: block;
+      overflow: hidden;
+      font-size: 0;
+      line-height: 0;
+      text-indent: -9999px;
+      background: url(//shop1.daumcdn.net/search/cdn/simage/shopping/v2/common/nav/ico_gnb_shw.png) no-repeat;
+      background-size: 130px 90px;
+    }
+
+    .ico--menu {
+      left: 4px;
+      background-position: 0 -30px;
+      position: absolute;
+      top: 13px;
+      width: 28px;
+      height: 28px;
+    }
+
+    .txt-bar {
+      float: left;
+      width: 1px;
+      height: 18px;
+      margin-top: 18px;
+      background-color: #e3e3e3;
+    }
+
+    @mixin link--common {
+      display: inline-block;
+      height: 54px;
+      font-weight: 700;
+      font-size: 16px;
+      line-height: 52px;
+      letter-spacing: -0.08em;
+    }
+
+    .list--left {
+      float: left;
+      padding: 0 12px 0 8px;
+
+      li {
+        float: left;
+      }
+
+      .link--item {
+        padding: 0 13px;
+        color: #222;
+      }
+
+      @include link--common;
+    }
+
+    .list--right {
+      @include link--common;
+    }
   }
 }
