--- a/public/src/css/styles.scss
+++ b/public/src/css/styles.scss
@@ -1,5 +1,14 @@
 @import './config/reset.scss';
-@import './main.scss';
 
 @import './partials/header.scss';
 @import './partials/nav.scss';
+@import './partials/main.scss';
+* {
+  box-sizing: border-box;
+}
+
+body {
+  margin: 0;
+  padding: 0;
+  // background-color: #f3f3f3;
+}
