Docs: add normalize.css & reset.css files to stylesheets folder

--- a/shopping_how/views/index.ejs
+++ b/shopping_how/views/index.ejs
@@ -2,6 +2,8 @@
 <html>
   <head>
     <title>쇼핑하우</title>
+    <link rel='stylesheet' href='/stylesheets/normalize.css'/>
+    <link rel='stylesheet' href='/stylesheets/reset.css'/>
     <link rel='stylesheet' href='/stylesheets/style.css' />
   </head>
   <body>
